--- a/www/css/toba.css
+++ b/www/css/toba.css
@@ -1,389 +1,3 @@
 /**
-	Incluir aquï¿½ las reglas css propias de este proyecto 
+	Incluir aquí las reglas css propias de este proyecto 
 */
-body {
-	background-color: #f3e7d0;/**c0d4c0*/
-}
-/**Color de arriba claro(#ec9d53) y abajo oscuro (#ee6a12)*/
-#barra_superior {
-	background-image: -webkit-gradient(
-	    linear,
-	    left top,
-	    left bottom,
-	    color-stop(0.5, #da9d64),
-	    color-stop(0.5, #ee6a12)
-	);
-	background-image: -moz-linear-gradient(
-	    center top,
-	    #ec9d53 50%,
-	    #ee6a12 50%
-	);		
-	-ms-filter: "progid:DXImageTransform.Microsoft.gradient (GradientType=0, startColorstr=#ec9d53, endColorstr=#ee6a12)";
-	
-	border: #085a46 1px solid ;
-	border-bottom: 1px solid #005638;
-	color: white;
-	min-height: 38px;
-}
-.zona-items {
-	background-image: -webkit-gradient(
-	    linear,
-	    left top,
-	    left bottom,
-	    color-stop(0.5, #ee6a12),
-	    color-stop(0.5, #ec9d53)
-	);
-	background-image: -moz-linear-gradient(
-	    center top,
-	    #ee6a12 50%,
-	    #ec9d53 50%
-	);		
-	-ms-filter: "progid:DXImageTransform.Microsoft.gradient (GradientType=0, startColorstr=#ee6a12, endColorstr=#ec9d53)";	
-	border-radius: 6px;
-	-moz-border-radius: 6px;
-	-webkit-border-radius: 6px;
-	border: #082d5a 1px solid ;
-	border-bottom: 1px solid #4c6385;
-	color: white;
-	padding: 0;
-	margin-right: 5px;
-	margin-top:5px;	
-}
-.zona-items a {
-	border-left:1px solid #143568;
-	min-width: 24px;
-	display: block;
-	float: left;
-	color: white;
-	text-decoration: none;
-	text-align: center;
-	padding: 3px;	
-}
-.item-barra {
-	margin-top: 8px;
-}
-.item-barra-tit {
-	font-size: 15px;
-}
-.item-barra-ayuda {
-	padding-left: 5px;
-	padding-right: 5px;
-	border-right: 1px solid #bfc9d5;
-	margin-right: 5px;
-}
-.zona-barra-id {
-	color: #ddd;
-}
-.zona-barra-desc {
-	font-size: 14px;
-}
-
-#enc-logo {
-	background-color: #ec9d53;	
-}
-
-/**************************
-		MENU
-***************************/
-
-ul.horizontal a, ul.horizontal a:visited {
-	background-color:#c2ddcb;	
-	border:1px solid #8d8e90;
-	margin-right:2px;
-}
-a.nivel-0, a.nivel-0:visited {
-	background-color: transparent !important;
-	border:none !important;
-}
-ul.horizontal a:hover, ul.horizontal a:focus, ul.horizontal a.rollover, ul.horizontal a.rollover:visited {
-	background-color:#ec9d53;
-	color: #ffffff;
-}
-a.nivel-0:hover, a.nivel-0:focus, a.nivel-0.rollover, a.nivel-0.rollover:visited {
-	background-color: #d0dbd7 !important;
-	border:1px solid #8d8e90 !important;
-	color: #000000 !important;
-}
-
-.encabezado{
-    background-color: white;
-    margin-bottom: 0;
-    padding-bottom: 1px;
-    border-bottom: 5px solid #ec9d53;
-}
-
-/*************************
-		Login
-**************************/
-
-.cuerpo {
-	margin-top: 0;
-	margin-bottom: 0;
-	padding-top: 15px;
-	padding-bottom: 15px;
-        background: #f3e7d0;
-}
-
-
-.login-titulo {
-        color:black;
-	background-color: #f8b045;
-        padding: 30px;
-        font-size: 14px;
-        
-}
-.login-titulo img{
-    width: 10%;
-    height: 10%;
-}
-.login-pie {
-        background: #f3e7d0;
-	margin-top: 0;
-	padding-top: 15px;
-	padding-bottom: 55px;
-	color: black;
-}
-.login-pie a {
-	color: black;
-	font-weight: bold;
-}
-
-/*************************
-		EI
-**************************/
-.ei-barra-sup-sin-tit.ci-barra-sup-tabs {
-	margin-bottom: -25px;
-}
-/** Barra superior de los ei- cuando, formularios y filtros*/
-.ei-barra-sup {
-	background-image: -webkit-gradient(
-	    linear,
-	    left top,
-	    left bottom,
-	    color-stop(0.5, #ec9d53),
-	    color-stop(0.5, #ee6a12)
-	);
-	background-image: -moz-linear-gradient(
-	    center top,
-	    #ec9d53 50%,
-	    #ee6a12 50%
-	);
-	-ms-filter: "progid:DXImageTransform.Microsoft.gradient (GradientType=0, startColorstr=#ec9d53, endColorstr=#ee6a12)";	
-	border: 1px solid #5268a1;
-	color: white;
-	min-height: 20px;
-        font-size: 12px;
-
-}
-
-/** Barra inferior de los ei- cuando, formularios y filtros*/
-.ei-botonera.ci-botonera.ci-botonera-abajo {
-    background: #ec9d53;
-}
-
-.ei-barra-sup img {
-	vertical-align: sub;
-}
-.ei-barra-sup-sin-tit .ei-botonera {
-	background-color: #ec9d53;
-}
-.ei-barra-sup-desc-info, .ci-wiz-enc {
-	color: #000000;
-	background-color: #ecf0f3 !important;
-	border:1px dotted #ccc;	
-}
-.ei-barra-sup-desc-warning, .ci-pant-desc-warning {
-	background-color: #FFFFE1;
-	border: 1px solid #b7f6e5;
-}
-.ei-barra-sup-desc-error, .ci-pant-desc-error {
-	background-color: #F1D3D9;
-	border: 1px solid #b7f6e5;
-}
-.ei-arbol-ver-prop {
-	color: black;
-}
-
-/***************** 
-		CI
-******************/
-.ei-base {
-	background-color: white;
-}
-.ci-base {
-	border-radius: 6px;
-	-moz-border-radius: 6px;	
-	-webkit-border-radius: 6px;	
-}   
-.ci-barra-sup {
-		background: transparent;
-		background-color: #f3e7d0;
-		border: 0;
-		font-weight: bold;
-		color:#e7fcef;
-		font-size: 24px;
-}
-.ci-barra-sup .ei-barra-sup-tit {
-	font-size: 14px;
-        color:white;
-}
-
-.ci-tabs-h-solapa {
-	border-left: 1px solid #ec9d53;
-	border-right: 1px solid #246851;
-	border-top: 1px solid #246851;
-	border-bottom: 1px solid #72aa8f;
-        
-	
-	background-image: -moz-linear-gradient(
-	    center top,
-	    #73b18a 50%,
-	    #df7512 50%
-	);
-	background-image: -webkit-gradient(
-	    linear,
-	    left top,
-	    left bottom,
-	    color-stop(0.5, #73b18a),
-	    color-stop(0.5, #df7512)
-	);		
-	-ms-filter: "progid:DXImageTransform.Microsoft.gradient (GradientType=0, startColorstr=#73b18a, endColorstr=#df7512)";	
-}
-
-.ci-botonera {
-	border-top: 1px solid #ddd;
-	margin-left: 4px;
-	margin-right: 4px;
-	padding: 8px 4px 8px 4px;
-}
-
-.ci-pant-sep-ei {
-	border-bottom:1px dotted gray;
-	margin-top:5px;
-	margin-bottom: 10px;
-}
-/********************************
-	CUADRO
-*******************************/
-.ei-cuadro-col-tit{
-    background:#9fd5b3;
-    font-weight: bold;
-    font-size: 100%;
-}
-.ei-ml-columna, .ei-filtro-columna {
-	background: url('cuadro-col-titulo.gif') repeat-x top;
-}
-/*************************
-		CUADRO
-**************************/
-.ei-barra-sup.ei-cuadro-barra-sup.ei-barra-sup-sin-botonera {
-	background: #df7512;
-}
-
-.ei-barra-sup{
-    font-size: 14px; 
-}
-
-.ei-cuadro-pag img {
-	vertical-align: middle;
-}
-.ei-cuadro-cuerpo {
-	padding:0;
-	margin:0;
-	BORDER-COLLAPSE: collapse;
-	empty-cells: hide;	
-}
-.ei-cuadro-scroll {
-	padding:2px;
-}
-.ei-cuadro-fila,  .ei-cuadro-total { 
-	border-left: 1px solid #eeeeee;
-	border-right: 1px solid #eeeeee;
-}
-.ei-cuadro-totales {
-	border-top: 1px solid #868987;
-	padding:4px;
-}
-.ei-cuadro-cc-fondo, .ei-ml-grilla, .ei-filtro-grilla {
-	border-bottom:1px solid #868987;
-	padding-left:1px;
-}
-.ei-filtro-columna {
-	padding-top: 2px;
-	padding-bottom:2px;
-	padding-left: 6px;
-	border: 1px solid #949495;
-	font-weight: normal;
-	font-family: Tahoma;
-	text-align:left;
-}
-.ei-cuadro-col-tit, .ei-ml-columna{
-    padding-top: 2px;
-	padding-bottom:2px;
-	padding-left: 6px;
-	border: 1px solid #949495;
-	font-weight: bold;
-	font-family: Tahoma;
-	text-align:left;
-}
-.ei-cuadro-col-tit-grupo {
-	text-align: center;
-}
-/** cada vez que se selecciona una fila*/
-.ei-cuadro-fila-sel, .ei-ml-fila-selec, .ei-filtro-fila-selec {
-	padding-top:2px;
-	padding-bottom:2px;
-	background-color: #ec9d53 !important;
-	border-top: 1px solid #eeeeee;
-	border-bottom: 1px solid #eeeeee;
-	color:white !important;
-}
-.ei-cuadro-celda-impar {
-	background-color:#ffffff;
-}
-.ei-cuadro-celda-par, .ei-ml-fila, .ei-filtro-fila {
-	background-color: #eef2f0;
-}
-.ei-ml-fila, .ei-filtro-fila {
-	border-top: 1px solid #eeeeee;
-	padding-top:2px;
-	padding-bottom:2px;	
-}
-
-.ei-cuadro-celda-par .col-num-p3, 
-.ei-cuadro-celda-par .col-num-p4, 
-.ei-cuadro-celda-par .col-tex-p3, 
-.ei-cuadro-celda-par .col-tex-p4, 
-.ei-cuadro-celda-par .col-cen-s3, 
-.ei-cuadro-celda-par .col-cen-s4 {
-	background-color: #ecf5f0;
-}
-
-/******************************
-     FILTRO
-******************************/
-
-.ei-barra-sup.ei-filtro-barra-sup.ei-barra-sup-sin-botonera {
-	background: #df7512;
-}
-
-/******************************
-	FORMULARIO
-******************************/
-
-.ei-barra-sup.ei-form-barra-sup.ei-barra-sup-sin-botonera {
-	background: #df7512;
-}
-
-
-.ei-barra-sup.ci-barra-sup.ei-barra-sup-sin-botonera {
-	background: #db680a;
-}
-
-.ei-barra-sup.ei-form-barra-sup {
-	background: #df7512;
-}
-
-
-
-
